--- a/style/main.css
+++ b/style/main.css
@@ -12,6 +12,7 @@ main{
     width: 100%;
     min-height: 33.688rem;
     height: auto;
+    padding-inline: 1rem;
 
     & header{
       width: 10.75rem;
