--- a/style/fields/input.css
+++ b/style/fields/input.css
@@ -1,6 +1,6 @@
-input[type="number"]{
+input{
   width: 5.375rem;
-  height: 5.5rem;
+  height: 4rem;
   border: none;
   border-radius: .5rem;
   background-color: var(--bg-secondary);
